--- a/ManuLasker/assigments/NaiveBayes.ipynb
+++ b/ManuLasker/assigments/NaiveBayes.ipynb
@@ -255,7 +255,7 @@
     "x_counts = torch.zeros(size=(28*28, 10), dtype=torch.float)\n",
     "for digit in range(10):\n",
     "    images_digit = mnist_train.data[mnist_train.targets == digit].float().view(-1,28*28)\n",
-    "    x_counts[:,digit] = 1 + images_digit.sum(dim=0)\n",
+    "    x_counts[:,digit] = 1 + images_digit.sum(dim=0)# sum 1 to avoid 0 cases\n",
     "px = (x_counts/y_counts.view(-1, 10)) #the sum of all image (specif digit) / the quantity of image of that digit"
    ]
   },
